force-app/main/default/objects/Lead/fields/AG_Comment__c.field-meta.xml
<CustomField>
    <fullName>AG_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>