force-app/main/default/objects/Lead/fields/AG_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>AG_Lead_Name__c</fullName>
    <formula>FirstName + &apos; &apos; +LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>