force-app/main/default/objects/Lead/fields/AG_Wait_Until__c.field-meta.xml
<CustomField>
    <fullName>AG_Wait_Until__c</fullName>
    <label>Wait Until</label>
    <type>Date</type>
</CustomField>